--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest"
+    "render-build": "npm run build"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
