--- a/server/package.json
+++ b/server/package.json
@@ -9,22 +9,21 @@
     "render-build": "npm run build"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.52.1",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "@supabase/supabase-js": "^2.39.7"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
-    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jest": "^29.5.12",
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "typescript": "^5.5.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
